<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ApeTime</string>
    <string name="start_button">Play</string>
    <string name="option_button">Options</string>
    <string name="language_button">Languages</string>
    <string name="about_button">About</string>
    <string name="first_ttitle_display">The title will be here</string>
    <string name="first_display_text">The text will be here</string>
    <string name="menu_button">Menu</string>
    <string name="score_button">Score</string>
    <string name="playerCreationTitle">Players</string>
    <string name="addPlayer_button">Add a player</string>
    <string name="startGame_button">Start game</string>
    <string name="game_button">Play</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="show_answer">Answer</string>
    <string name="game_end_title">End Game Score</string>
    <string name="info_text">Do not forget to edit the alcohol quantity of each player by clicking on</string>
    <string name="player1">Player 1</string>
    <string name="ok_button">OK</string>
    <string name="playe_name_hint">Player\'s name</string>
    <string name="previous_name_missing_error">Please fill the previous text entry box</string>
    <string name="maximum_player_error">Maximum player amount reached</string>
    <string name="minimum_player_error">2 players minimum</string>
    <string name="missing_names_error">Please fill all text entry boxes</string>
    <string name="drink_0_message">is not thirsty</string>
    <string name="drink_1_message">is a little thirsty</string>
    <string name="drink_2_message">is thirsty</string>
    <string name="drink_3_message">wants to get drunk</string>
    <string name="miniGame_success_question">pass the Mini-Game ?</string>
    <string name="answer_action_success">answered correctly/did the action ?</string>
    <string name="the_annecdote">"Is the anecdote of "</string>
    <string name="satisfying_question">is satisfying ?</string>
    <string name="scoring">scores</string>
    <string name="points">points !</string>
    <string name="drink0_sips">0 sip</string>
    <string name="drink1_sips">1 sip</string>
    <string name="drink2_sips">2 sips</string>
    <string name="drink3_sips">3 sips</string>
    <string name="title_activity_simple_wheel">SimpleWheelActivity</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="game2">Roulette</string>
    <string name="game1">ApeChill</string>
    <string name="game3">Red or Black</string>
    <string name="you_drink">" drink"</string>
    <string name="sips">\ sips</string>
    <string name="remain">remains</string>
    <string name="cardPack">cards in the pack</string>
    <string name="next_button">next</string>
    <string name="wheel_player_call">" spin the wheel by clicking on Spin"</string>
    <string name="or">or</string>
    <string name="black">Black</string>
    <string name="end_of_black_or_red">End of Game</string>
    <string name="games_election_button">Game Selection</string>
    <string name="type_gage">Dare</string>
    <string name="type_mini_game">Mini-Game</string>
    <string name="type_sentence">Question</string>
    <string name="type_anecdote">Anecdote</string>
    <string name="games">Games</string>
    <string name="apechill_title">ApeChill</string>
    <string name="roulette_title">Roulette</string>
    <string name="black_or_red_title">Red or Black</string>
    <string name="you_lost">Lost</string>
    <string name="you_win">Won</string>
    <string name="game">Games</string>
    <string name="win">Win</string>
    <string name="loose">Lost</string>
    <string name="duplicater_player_name_error">You can not use the same name several times</string>
    <string name="title_activity_game_selection">GameSelectionActivity</string>
    <string name="title_activity_game_selection2">GameSelectionActivity2</string>
    <string name="error_image">Please fill the text entry box</string>
    <string name="empty_add_player_error">Write a valid player name</string>
    <string name="restart_button">Play again</string>
    <string name="roulete_description">Because you don\'t need a reason to drink !</string>
    <string name="description_red_or_black">One chance out of two, easy right ?</string>
    <string name="ApePiment">ApeSpice</string>
    <string name="ape_pimnet_description">For a spicy party, discover the naughty secrets of your friends</string>
    <string name="drink">drink</string>
    <string name="your_turn">it\'s your turn</string>
    <string name="game_description">You can answer the question and earn points or skip and drink by pressing: </string>
    <string name="block_popup">"Do not show again "</string>
    <string name="popup_reset_button">Reset settings</string>
    <string name="popups_enabled">settings reset</string>
    <string name="text">Enter your sentence</string>
    <string name="add_answer">Add your answer</string>
    <string name="add_text">Add your sentence</string>
    <string name="visualize">visualise</string>
    <string name="game_mode">Game Mode: </string>
    <string name="type_spinner">Sentence type:</string>
    <string name="mark">Player 1 scores</string>
    <string-array name="gameModeList">
        <item>ApeChill</item>
        <item>ApePiment</item>
    </string-array>
    <string-array name="typeList">
        <item>Anecdote</item>
        <item>Gage</item>
        <item>Mini-jeu</item>
        <item>Question</item>
    </string-array>
    <string-array name="pointList">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
    </string-array>
    <string name="title_activity_add_sentence2">AddSentenceActivity2</string>
    <string name="what_sentence_type">What type of sentence do you want to add ?</string>
    <string name="sentence">Sentence</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="right_answer">I\'m the right answer</string>
    <string name="wrong_answer">I\'m the wrong answer</string>
    <string name="add_sentence">Add a sentence</string>
    <string name="my_sentence">My sentence</string>
    <string name="my_sentences">My sentences</string>
    <string name="skip">skip</string>
    <string name="first_text_info_addSentence">Complete your sentence along the way and follow its evolution by scrolling. Each part of your sentence is editable at any moment</string>
    <string name="second_text_info_addSentence1">By clicking on the picture bellow, a player will be mentioned</string>
    <string name="third_text_info_addSentence">When everything is ready, press \"Visualise\" in order to see how your sentence will appear in the game</string>
    <string name="note_max_player">note: 3 players max</string>
    <string name="game_mode_edit_text">In which game mode do you want to add your sentence ?</string>
    <string name="sumury_text">Summary of your settings, you can still edit them.</string>
    <string name="complete">Complete your sentence</string>
    <string name="check_info">"Check every information and press next "</string>
    <string name="point_case_right_answer">How many points if the player answers ?</string>
    <string name="right_button">Right button</string>
    <string name="left_button">Left Button</string>
    <string name="player_mark">Player 1 scores</string>
    <string name="_1_point">1 point</string>
    <string name="_2_points">2 points</string>
    <string name="_3_points">3 points</string>
    <string name="_4_points">4 points</string>
    <string name="help_description">If you don\'t want to answer press:</string>
    <string-array name="win_sentences_array">
        <item>§ won ¤ points</item>
        <item>§ earned ¤ points</item>
        <item>§ grabbed ¤ points</item>
        <item>§ is on fire ! + ¤ point(s)</item>
    </string-array>
    <string name="write_in_custom_answer_popup">Write what should be shown in the answer popup</string>
    <string name="edit_buttons_and_select_correct_answer">Edit the buttons to give them the text you want.\n And select which answer gives sips and which answer gives points</string>
    <string name="check_informations">Check every information and press next !</string>
    <string name="default_custom_sentence_punition">¤§ drink µ</string>
    <string name="description_ape_chill">Fill in the players\' names and let the fun begin !</string>
    <string name="what_is_next_card">What is the next card\'s color ?</string>
    <string name="player_landmark">player</string>
    <string name="player1_scores"><![CDATA[\"<b><i>Player 1</i><b> scores \"]]></string>
    <string name="point">\" point(s)\"</string>
    <string name="player1_drink_x_sips"><![CDATA[<b><i>Player 1</i><b> drink x sip(s)]]></string>
    <string name="player1_bold_italic"><![CDATA[<b><i>Player 1</i></b>]]></string>
    <string name="player2_bold_italic"><![CDATA[<b><i>Player 2</i></b>]]></string>
    <string name="player3_bold_italic"><![CDATA[<b><i>Player 3</i></b>]]></string>
    <string name="confirm_add_sentence">Do you confirm adding this sentence, or you want to modify it ?</string>
    <string name="modify_button">Modify</string>
    <string name="modify">Confirm</string>
    <string name="confirm_or_keep_editing">Do you confirm your modifications or you want to keep editing ?</string>
    <string name="answerd_button">answered ?</string>
    <string name="drink_warning">Drink responsivly and ask your friends for help if you need it.</string>
    <string name="finish">finish</string>
    <string name="modify_what_you_want">\"Modify what you want and press next !\"</string>
    <string name="spin">spin</string>
    <string name="apetime">ApeTime</string>
    <string name="coming_soon">Coming soon</string>
    <string name="new_game_coming_soon">A new game will coming soon be ready !</string>
    <string name="ApeBus">ApeBus</string>
    <string name="apebus_description">"The famous game auto-bus is here two ! "</string>
    <string name="temp_win_bus">Good job ! Now next card, plus or minus ?</string>
    <string name="lost_game_bus">Lost, Drink µ sips and its restarting, plus or minus ?</string>
    <string name="well_done_u_win">Well done! You win</string>
    <string name="how_many_card">Level of difficulty</string>
    <string name="ape_bus_rules">Wait until the animation is finish, try to guess if the card drawn is plus or minus that the previous one</string>
    <string name="ape_bus_rules2">Is better if one of your friend make you play</string>
    <string name="welcome">Welcome</string>
    <string name="theme">Themes</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="con_error">Welcome to ApeTime, during your first use, you need to be connect to the internet</string>
    <string name="no_con">No connection</string>
    <string name="error_message">"Connexion failed, pleese change your setting, your wifi might block our data "</string>
    <string name="retry">Retry</string>
    <string name="leave">Leave</string>
    <string name="parse_error">error, we are having connection problems please try again later</string>
    <string name="con_block">error, your wifi connection seems to block downloading, please switch to a private wifi or a 4g connection</string>
</resources>