<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/game_selection_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:gravity="center"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/game1_button"
            app:backgroundTint="@null"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/game1"/>

        <Button
            app:backgroundTint="@null"
            android:id="@+id/game2_button"
            android:text="@string/game2"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="20dp"
            />
        <Button
            app:backgroundTint="@null"
            android:id="@+id/menu_button"
            android:text="@string/menu_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>