<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="@drawable/popupbg_shape">
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_title_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="@android:dimen/notification_large_icon_height"
            android:fontFamily="@font/convergence"
            android:gravity="center"
            android:text="@string/first_ttitle_display"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/current_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/convergence"
            android:gravity="center"
            android:text="@string/first_display_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/answer_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_shape"
            android:text="@string/show_answer"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>