<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popupbg_shape"
    android:layout_gravity="center"
    >

    <ImageView
        android:id="@+id/x_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/x_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/red_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button_red"
            android:text="@string/red"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="@null" />
        <Button
            android:id="@+id/blue_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_blue"
            android:text="@string/blue"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="@null" />
        <Button
            android:id="@+id/green_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_green"
            android:text="@string/green"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="@null" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>