<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:gravity="center"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent"
    >

    <ImageButton
        android:id="@+id/x_button"
        android:layout_width="30dp"

        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/x_icon" />

    <ImageButton
        android:id="@+id/score_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="300dp"
        android:src="@drawable/s_icon" />


</LinearLayout>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/current_title_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@android:dimen/notification_large_icon_height"
            android:fontFamily="@font/convergence"
            android:gravity="center"
            android:text="@string/first_ttitle_display"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/current_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/convergence"
            android:gravity="center"
            android:text="@string/first_display_text"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/answer_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_shape"
            android:text="@string/show_answer"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="@null" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>