<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_color_red"
    android:gravity="center"
    android:id="@+id/card_game_layout"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/x_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/x_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nb_card"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/convergence"
        android:text="52"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/cardback"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/what_is_next_card"
            android:id="@+id/card_color_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/convergence"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="250dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/corner_shape"
                android:scaleType="centerCrop"
                android:src="@drawable/cardback" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:id="@+id/next_arrow"
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    <ImageView
        android:id="@+id/replay_button"
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/replay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/red_button"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:text="@string/red"
            app:backgroundTint="@null"
            android:layout_width="137dp"
            android:layout_height="52dp"
            android:background="@drawable/red_button"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="-1"
            android:shadowRadius="7"
            />


        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/convergence"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:layout_width="137dp"
            android:layout_height="52dp"
            android:background="@drawable/black_button"
            android:shadowColor="#FFFFFF"
            android:shadowDx="3"
            android:shadowDy="-1"
            android:shadowRadius="7"
            android:text="@string/black"
            android:id="@+id/black_button"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>